# LifeFlow.ai

./: .env.example  .gitignore  QUICKSTART.py  README.md  backend_log.txt  bootstrap_knowledge.py  check_instance_schema.py  check_workflows.py  clarification_test_output.txt  db_dump.txt  error.txt  export_db.py  get_otp.py  inspect_index.py  knowledge_sources.yaml  knowledge_sources_test.yaml  latency_results.txt  lifeflow.db  list_tables.py  models.txt  pyproject.toml  refactor_log.txt  refactor_output.txt  requirements.txt  router_dataset.jsonl  server_log.txt  setup.py  signup_error.txt  test_apis.py  test_auth.py  test_base_instances.py  test_complete_system.py  test_e2e_workflow.py  test_error.txt  test_final_import.py  test_frontend_migration.py  test_intake.py  test_journey.py  test_metadata_conflict.py  test_metadata_v2.py  (+12 more)
app/: __init__.py  auth_models.py  database.py  main.py  models.py  rag_service.py  schemas.py
frontend/: package-lock.json  package.json
lifeflow_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: add_clarification_columns.py  clean_knowledge_db.py  debug_gemini_latency.py  download_pdfs.py  evaluate_retrieval.py  evaluate_router.py  ingest_knowledge.py  ingest_knowledge_test.py  list_available_models.py  list_models.py  list_situations.py  read_models.py  rebuild_faiss.py  revalidate_sources.py  test_api_latency.py  test_clarification_flow.py  test_embedding_rest.py  test_intake_latency.py  test_local_embedding.py  test_rag_latency.py  test_situation_latency.py  test_vector_search.py  train_router.py
tests/: eval_queries.json  (+4 more)
(+143 files in other folders)
